--- a/package.json
+++ b/package.json
@@ -42,6 +42,17 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-query": "^5.87.4",
+    "@tiptap/extension-bullet-list": "^3.6.5",
+    "@tiptap/extension-color": "^3.6.5",
+    "@tiptap/extension-link": "^3.6.5",
+    "@tiptap/extension-list-item": "^3.6.5",
+    "@tiptap/extension-ordered-list": "^3.6.5",
+    "@tiptap/extension-placeholder": "^3.6.5",
+    "@tiptap/extension-text-align": "^3.6.5",
+    "@tiptap/extension-text-style": "^3.6.5",
+    "@tiptap/extension-underline": "^3.6.5",
+    "@tiptap/react": "^3.6.5",
+    "@tiptap/starter-kit": "^3.6.5",
     "@trustless-work/escrow": "^1.0.2",
     "axios": "^1.12.0",
     "class-transformer": "^0.5.1",
