--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "@trustless-work/escrow": "^1.0.2",
+    "@types/crypto-js": "^4.2.2",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^1.12.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -61,6 +63,7 @@
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "emoji-mart": "^5.6.0",
@@ -81,6 +84,7 @@
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.4",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "stellar-sdk": "^13.3.0",
     "tailwind-merge": "^2.6.0",
