feat: File and Media Sharing System

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,14 +1,17 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=postgres
-DATABASE_PASSWORD=password
+DATABASE_PASSWORD=<YOUR_DATABASE_PASSWORD>
 DATABASE_NAME=offer_hub_database
 
 # API Gateway Configuration
 PORT=3001
-JWT_SECRET=offer_hub_api_gateway_secret_key
+# IMPORTANT: Generate a secure random secret and NEVER commit it
+# Example (Linux/macOS): openssl rand -base64 64
+JWT_SECRET=CHANGE_ME_SECURE_RANDOM
 HASURA_URL=http://localhost:8080/v1/graphql
-HASURA_GRAPHQL_ADMIN_SECRET=offerhub_secret
+# IMPORTANT: Set a strong secret in your local .env or secrets manager
+HASURA_GRAPHQL_ADMIN_SECRET=REPLACE_WITH_SECURE_HASURA_ADMIN_SECRET
 AUTH_SERVICE_URL=http://localhost:3001/auth
 PAYMENTS_SERVICE_URL=http://localhost:3001/payments
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
