--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "on-finished": "^2.4.1",
+    "@stellar/stellar-sdk": "^13.0.0",
     "supabase": "^2.34.3",
     "systeminformation": "^5.27.9",
     "winston": "^3.17.0",
