--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node -r tsconfig-paths/register dist/index.js",
     "lint": "eslint --config eslint.config.js src/**/*.ts",
     "lint:fix": "eslint --config eslint.config.js src/**/*.ts --fix",
     "test": "jest",
@@ -33,6 +33,7 @@
     "@stellar/stellar-sdk": "^13.0.0",
     "supabase": "^2.34.3",
     "systeminformation": "^5.27.9",
+    "tsconfig-paths": "^4.2.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -56,7 +57,6 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.3",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
     "uuid": "^8.3.2"
   }
