--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
-    "build": "tsc",
-    "start": "node -r tsconfig-paths/register dist/index.js",
+    "build": "tsc && tsc-alias",
+    "start": "node dist/index.js",
     "lint": "eslint --config eslint.config.js src/**/*.ts",
     "lint:fix": "eslint --config eslint.config.js src/**/*.ts --fix",
     "test": "jest",
@@ -19,6 +19,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@stellar/stellar-sdk": "^13.0.0",
     "@supabase/supabase-js": "^2.51.0",
     "axios": "^1.12.0",
     "bcryptjs": "^3.0.2",
@@ -30,9 +31,9 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "on-finished": "^2.4.1",
-    "@stellar/stellar-sdk": "^13.0.0",
     "supabase": "^2.34.3",
     "systeminformation": "^5.27.9",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
