--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,6 +13,6 @@
     }
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"],
   "files": ["./src/types/express.d.ts"]
 }
