--- a/render.yaml
+++ b/render.yaml
@@ -5,9 +5,10 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: cd backend && npm install && npm run build
-    startCommand: cd backend && npm start
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     healthCheckPath: /
+    rootDir: backend
     envVars:
       - key: NODE_ENV
         value: production
