--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "@types/on-finished": "^2.3.5",
+    "@types/uuid": "^8.3.4",
     "axios": "^1.12.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -42,6 +43,7 @@
     "systeminformation": "^5.27.9",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
+    "uuid": "^8.3.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -49,7 +51,6 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.34.0",
     "@types/supertest": "^6.0.3",
-    "@types/uuid": "^8.3.4",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
