fix: specify Node.js 18 and use npm ci for reliable builds in Render

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,8 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: npm install && npm run build
+    nodeVersion: 18
+    buildCommand: npm ci && npm run build
     startCommand: npm start
     healthCheckPath: /
     rootDir: backend
