--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
+    "postinstall": "echo 'Dependencies installed successfully'",
     "lint": "eslint --config eslint.config.js src/**/*.ts",
     "lint:fix": "eslint --config eslint.config.js src/**/*.ts --fix",
     "test": "jest",
