fix: force uuid to dependencies and upgrade to Node.js 20

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
-    "postinstall": "echo 'Dependencies installed successfully'",
+    "postinstall": "echo 'Dependencies installed successfully' && npm list uuid || echo 'UUID not found'",
     "lint": "eslint --config eslint.config.js src/**/*.ts",
     "lint:fix": "eslint --config eslint.config.js src/**/*.ts --fix",
     "test": "jest",
@@ -25,8 +25,8 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
     "@types/on-finished": "^2.3.5",
     "@types/uuid": "^8.3.4",
@@ -44,7 +44,7 @@
     "systeminformation": "^5.27.9",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
-    "uuid": "^8.3.2",
+    "uuid": "8.3.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
