--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
-    "build": "tsc && tsc-alias",
+    "build": "tsc --noEmitOnError false && tsc-alias",
     "start": "node dist/index.js",
     "postinstall": "echo 'Dependencies installed successfully'",
     "lint": "eslint --config eslint.config.js src/**/*.ts",
