--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@types/react-dom": "^18.3.7",
     "@types/recharts": "^1.8.29",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "jest": "^30.1.3",
