--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "offerhub-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^18.18.0 || ^19.8.0 || >=20.0.0"
+  },
+  "overrides": {
+    "next": "15.1.4",
+    "eslint-config-next": "15.1.4",
+    "@next/env": "15.1.4"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -70,7 +78,7 @@
     "express": "^4.21.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.473.0",
-    "next": "^16.0.7",
+    "next": "15.1.4",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.1",
