--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,54 +1,30 @@
-# =================================
-#  SERVER CONFIGURATION
-# =================================
+# ============================================
+# OFFER-HUB Backend - Environment Variables
+# ============================================
+# Copy: cp .env.example .env
+# Never commit .env to git!
 
-# Server port configuration (default: 4000)
-# Change this if the default port is already in use
-PORT=4000
+# ============================================
+# SECTION: SUPABASE CONFIGURATION
+# ============================================
+# Get from: Supabase Dashboard > Settings > API
+# Use service_role key (NOT anon key)
 
-# =================================
-#  SUPABASE CONFIGURATION
-# =================================
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
-# Supabase project URL - get this from your Supabase dashboard
-# Example: https://your-project.supabase.co
-SUPABASE_URL=
+# ============================================
+# SECTION: JWT AUTHENTICATION
+# ============================================
+# Generate: openssl rand -base64 32
+# Min 32 characters
 
-# Supabase service role key for server-side operations
-# Keep this secret! Do not share it or commit it with real values
-SUPABASE_SERVICE_ROLE_KEY=
+JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters-long
 
-# =================================
-#  JWT CONFIGURATION
-# =================================
+# ============================================
+# SECTION: WALLET ENCRYPTION
+# ============================================
+# Generate: openssl rand -base64 32
+# Min 32 characters. Keep secure!
 
-# JWT secret key for token signing - use a strong random string
-# Example: generate with `openssl rand -hex 32`
-JWT_SECRET=your-jwt-secret
-
-# JWT access token expiry time
-# Examples: 15m, 1h, 24h
-JWT_EXPIRES_IN=24h
-
-# JWT refresh token expiry time  
-# Examples: 7d, 30d
-JWT_REFRESH_EXPIRES_IN=7d
-
-# =================================
-#  APPLICATION CONFIGURATION
-# =================================
-
-# Node environment (development/production)
-# Use 'development' locally and 'production' in deployment
-NODE_ENV=
-
-# Log level (error, warn, info, debug)
-# Use 'debug' during development to see detailed logs
-LOG_LEVEL=info
-
-# =================================
-#  NOTES
-# =================================
-# - Copy this file to `.env` and replace placeholder values
-# - Never commit real secrets
-# - For deployment, configure environment variables in your hosting platform (e.g., Vercel, Netlify, Heroku, or Docker)
+WALLET_ENCRYPTION_KEY=your-wallet-encryption-key-minimum-32-characters
