--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,14 +4,17 @@
 # Copy: cp .env.example .env
 # Never commit .env to git!
 
+
 # ============================================
 # SECTION: SUPABASE CONFIGURATION
 # ============================================
 # Get from: Supabase Dashboard > Settings > API
 # Use service_role key (NOT anon key)
 
+
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
 
 # ============================================
 # SECTION: JWT AUTHENTICATION
@@ -19,7 +22,9 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 # Generate: openssl rand -base64 32
 # Min 32 characters
 
-JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters-long
+
+JWT_SECRET=your-jwt-secret-key-min-32-characters-long
+
 
 # ============================================
 # SECTION: WALLET ENCRYPTION
@@ -27,4 +32,87 @@ JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters-long
 # Generate: openssl rand -base64 32
 # Min 32 characters. Keep secure!
 
-WALLET_ENCRYPTION_KEY=your-wallet-encryption-key-minimum-32-characters
+
+WALLET_ENCRYPTION_KEY=your-wallet-encryption-key-min-32-characters-long
+
+
+# ============================================
+# SECTION: EMAIL CONFIGURATION
+# ============================================
+# Email service for password recovery and transactional emails
+# IMPORTANT: EMAIL_USER and EMAIL_PASSWORD are SMTP server credentials,
+# NOT the recipient email. The recipient email comes from user requests.
+
+
+# Method 1: Using Service Provider (Gmail, SendGrid, etc.)
+# Uncomment and configure ONE of the following:
+
+
+# For Gmail:
+# EMAIL_SERVICE=gmail
+# EMAIL_USER=your-email@gmail.com
+# EMAIL_PASSWORD=your-app-password  # Use App Password, not your regular password
+
+
+# For SendGrid:
+# EMAIL_SERVICE=sendgrid
+# EMAIL_USER=apikey
+# EMAIL_PASSWORD=your-sendgrid-api-key
+
+
+# Method 2: Using Custom SMTP Server
+# Uncomment and configure:
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
+# SMTP_SECURE=false  # true for port 465, false for port 587
+# EMAIL_USER=your-smtp-username@example.com
+# EMAIL_PASSWORD=your-smtp-password
+
+
+# Sender email (appears as "From" in emails)
+EMAIL_FROM=noreply@offer-hub.org
+
+
+# Frontend URL for password reset links
+FRONTEND_URL=http://localhost:3000
+
+
+# Development: Set to true to log emails instead of sending
+EMAIL_DISABLED=false
+
+
+# ============================================
+# SECTION: STELLAR BLOCKCHAIN - BACKEND
+# ============================================
+
+
+# User Registry Contract (para verificación)
+USER_REGISTRY_CONTRACT_ID=your-user-registry-contract-id
+
+
+# Admin Credentials (para firmar transacciones)
+STELLAR_ADMIN_SECRET_KEY=your-stellar-admin-secret-key
+STELLAR_ADMIN_ADDRESS=your-stellar-admin-address
+
+
+# Network Configuration
+STELLAR_NETWORK=futurenet
+STELLAR_RPC_URL=https://rpc-futurenet.stellar.org:443
+STELLAR_NETWORK_PASSPHRASE=Test SDF Future Network ; October 2022
+
+
+# Otros Contratos
+FEE_MANAGER_CONTRACT_ID=your-fee-manager-contract-id
+ESCROW_CONTRACT_ID=your-escrow-contract-id
+PUBLICATION_CONTRACT_ID=your-publication-contract-id
+RATING_CONTRACT_ID=your-rating-contract-id
+DISPUTE_CONTRACT_ID=your-dispute-contract-id
+
+
+# ============================================
+# SECTION: STELLAR NETWORK (solo Stellar testnet)
+# ============================================
+STELLAR_NETWORK=testnet
+STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
+SOROBAN_RPC_URL=https://soroban-testnet.stellar.org:443
+NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
