--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/on-finished": "^2.3.5",
     "axios": "^1.12.0",
     "bcryptjs": "^3.0.2",
@@ -38,6 +39,7 @@
     "express-rate-limit": "^6.11.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.12",
     "on-finished": "^2.4.1",
     "supabase": "^2.34.3",
     "systeminformation": "^5.27.9",
