docs: update .env.example with email configuration examples
- Add email configuration section with examples
- Document Gmail, SendGrid, and custom SMTP options
- Use placeholder values for security
- Include all required environment variables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -37,49 +37,28 @@ WALLET_ENCRYPTION_KEY=your-wallet-encryption-key-min-32-characters-long
 
 
 # ============================================
-# SECTION: EMAIL CONFIGURATION
+# Email Configuration for Password Recovery
 # ============================================
-# Email service for password recovery and transactional emails
-# IMPORTANT: EMAIL_USER and EMAIL_PASSWORD are SMTP server credentials,
-# NOT the recipient email. The recipient email comes from user requests.
 
 
 # Method 1: Using Service Provider (Gmail, SendGrid, etc.)
 # Uncomment and configure ONE of the following:
 
-
 # For Gmail:
-# EMAIL_SERVICE=gmail
-# EMAIL_USER=your-email@gmail.com
-# EMAIL_PASSWORD=your-app-password  # Use App Password, not your regular password
+EMAIL_SERVICE=gmail
+MAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password  # Use App Password, not your regular password
 
-
-# For SendGrid:
-# EMAIL_SERVICE=sendgrid
-# EMAIL_USER=apikey
-# EMAIL_PASSWORD=your-sendgrid-api-key
-
-
-# Method 2: Using Custom SMTP Server
-# Uncomment and configure:
-# SMTP_HOST=smtp.example.com
-# SMTP_PORT=587
-# SMTP_SECURE=false  # true for port 465, false for port 587
-# EMAIL_USER=your-smtp-username@example.com
-# EMAIL_PASSWORD=your-smtp-password
 
 
 # Sender email (appears as "From" in emails)
 EMAIL_FROM=noreply@offer-hub.org
 
-
 # Frontend URL for password reset links
 FRONTEND_URL=http://localhost:3000
 
-
 # Development: Set to true to log emails instead of sending
 EMAIL_DISABLED=false
-
 
 
 # ============================================
