--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,8 @@
     "@types/node": "^24.3.1",
     "@types/nodemailer": "^7.0.4",
     "@types/on-finished": "^2.3.5",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
     "axios": "^1.12.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -41,6 +43,11 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.12",
     "on-finished": "^2.4.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-github2": "^0.1.12",
+    "passport-microsoft": "^0.0.2",
+    "jsonwebtoken": "^9.0.2",
     "supabase": "^2.34.3",
     "systeminformation": "^5.27.9",
     "tsc-alias": "^1.8.16",
