--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,17 +4,14 @@
 # Copy: cp .env.example .env
 # Never commit .env to git!
 
-
 # ============================================
 # SECTION: SUPABASE CONFIGURATION
 # ============================================
 # Get from: Supabase Dashboard > Settings > API
 # Use service_role key (NOT anon key)
 
-
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
-
 
 # ============================================
 # SECTION: JWT AUTHENTICATION
@@ -22,9 +19,7 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 # Generate: openssl rand -base64 32
 # Min 32 characters
 
-
 JWT_SECRET=your-jwt-secret-key-min-32-characters-long
-
 
 # ============================================
 # SECTION: WALLET ENCRYPTION
@@ -32,34 +27,28 @@ JWT_SECRET=your-jwt-secret-key-min-32-characters-long
 # Generate: openssl rand -base64 32
 # Min 32 characters. Keep secure!
 
-
 WALLET_ENCRYPTION_KEY=your-wallet-encryption-key-min-32-characters-long
-
 
 # ============================================
 # Email Configuration for Password Recovery
 # ============================================
 
-
-# Method 1: Using Service Provider (Gmail, SendGrid, etc.)
-# Uncomment and configure ONE of the following:
-
-# For Gmail:
 EMAIL_SERVICE=gmail
-MAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-password  # Use App Password, not your regular password
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_password_for_applications
+EMAIL_FROM=noreply@your_email
 
-
-
-# Sender email (appears as "From" in emails)
-EMAIL_FROM=noreply@offer-hub.org
-
+# ============================================
 # Frontend URL for password reset links
+# ============================================
+
 FRONTEND_URL=http://localhost:3000
 
+# ============================================
 # Development: Set to true to log emails instead of sending
-EMAIL_DISABLED=false
+# ============================================
 
+EMAIL_DISABLED=false
 
 # ============================================
 # SECTION: STELLAR NETWORK (solo Stellar testnet)
@@ -68,3 +57,23 @@ STELLAR_NETWORK=testnet
 STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
 SOROBAN_RPC_URL=https://soroban-testnet.stellar.org:443
 NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
+
+# ============================================
+# OAuth - Credentials
+# ============================================
+
+# ============================================
+# Google OAuth
+# ============================================
+
+GOOGLE_CLIENT_ID=123456789-abcdefghijklmnopqrstuvwxyz.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-abcdefghijklmnopqrstuvwxyz123456
+GOOGLE_CALLBACK_URL=http://localhost:4000/api/oauth/google/callback
+
+# ============================================
+# Github OAuth
+# ============================================
+
+GITHUB_CLIENT_ID=tu_client_id_aqui
+GITHUB_CLIENT_SECRET=tu_client_secret_aqui
+GITHUB_CALLBACK_URL=http://localhost:4000/api/oauth/github/callback
