--- a/backend/.env.example
+++ b/backend/.env.example
@@ -77,3 +77,8 @@ GOOGLE_CALLBACK_URL=http://localhost:4000/api/oauth/google/callback
 GITHUB_CLIENT_ID=tu_client_id_aqui
 GITHUB_CLIENT_SECRET=tu_client_secret_aqui
 GITHUB_CALLBACK_URL=http://localhost:4000/api/oauth/github/callback
+
+# ============================================
+# OAuth Encryption (optional, uses JWT_SECRET if not set)
+# ============================================
+OAUTH_TOKEN_ENCRYPTION_KEY=your-wallet-encryption-key-min-32-characters-long
