--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -26,35 +26,39 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
-          cache-dependency-path: package-lock.json
+          cache: "pnpm"
 
       - name: Cache node_modules
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-deps-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-pnpm-${{ matrix.node-version }}-deps-${{ hashFiles('pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-node-${{ matrix.node-version }}-deps-
+            ${{ runner.os }}-pnpm-${{ matrix.node-version }}-deps-
       - name: Cache .next build
         uses: actions/cache@v4
         with:
           path: .next
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('package-lock.json') }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('pnpm-lock.yaml') }}-
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: pnpm install --no-frozen-lockfile
 
       - name: Run linting
-        run: npm run lint:ci
+        run: pnpm run lint:ci
 
       - name: Build Next.js application
-        run: npm run build
+        run: pnpm run build
         env:
           CI: true
           NODE_ENV: production
@@ -74,18 +78,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
-          cache-dependency-path: package-lock.json
+          cache: "pnpm"
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: pnpm install --no-frozen-lockfile
 
       - name: Run security audit
-        run: npm audit --audit-level moderate --legacy-peer-deps
+        run: pnpm audit --audit-level moderate
 
   deploy-preview:
     runs-on: ubuntu-latest
@@ -96,21 +104,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
-          cache-dependency-path: package-lock.json
+          cache: "pnpm"
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: pnpm install --no-frozen-lockfile
 
       - name: Run linting
-        run: npm run lint:ci
+        run: pnpm run lint:ci
 
       - name: Build for preview
-        run: npm run build
+        run: pnpm run build
         env:
           NODE_ENV: production
 
