feat(contracts): add project publication contract configuration
- Introduced PROJECT_PUBLICATION_CONTRACT_ID in render.yaml and .env.example
- Updated contracts.ts to include projectPublication in ContractConfig
- Added project-publication-contract dependency in Cargo.lock

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -57,6 +57,7 @@ STELLAR_NETWORK=testnet
 STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
 SOROBAN_RPC_URL=https://soroban-testnet.stellar.org:443
 NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
+STELLAR_NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
 
 # ============================================
 # OAuth - Credentials
@@ -82,3 +83,20 @@ GITHUB_CALLBACK_URL=http://localhost:4000/api/oauth/github/callback
 # OAuth Encryption (optional, uses JWT_SECRET if not set)
 # ============================================
 OAUTH_TOKEN_ENCRYPTION_KEY=your-wallet-encryption-key-min-32-characters-long
+
+# ============================================
+# SECTION: SOROBAN SMART CONTRACTS
+# ============================================
+# Contract addresses deployed on Stellar network
+# Get contract IDs after deploying contracts to testnet/mainnet
+
+# Admin secret key for signing contract transactions
+# WARNING: Keep this secure! Never commit to git!
+STELLAR_ADMIN_SECRET_KEY=your-admin-secret-key-here
+
+# Project Publication Contract
+# Deployed contract address for recording project publications
+PROJECT_PUBLICATION_CONTRACT_ID=your-project-publication-contract-id-here
+
+# User Registry Contract (if needed)
+USER_REGISTRY_CONTRACT_ID=your-user-registry-contract-id-here
