feat: implement escrow balances endpoint

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -100,3 +100,12 @@ PROJECT_PUBLICATION_CONTRACT_ID=your-project-publication-contract-id-here
 
 # User Registry Contract (if needed)
 USER_REGISTRY_CONTRACT_ID=your-user-registry-contract-id-here
+
+# ============================================
+# SECTION: TRUSTLESSWORK API
+# ============================================
+# TrustlessWork API for escrow operations
+# Get API key from: https://docs.trustlesswork.com
+
+TRUSTLESSWORK_API_KEY=your-trustlesswork-api-key-here
+TRUSTLESSWORK_API_URL=https://dev.api.trustlesswork.com
