--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@stellar/stellar-sdk": "^14.4.3",
     "@supabase/supabase-js": "^2.51.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
