--- a/backend/package.json
+++ b/backend/package.json
@@ -55,7 +55,11 @@
     "zod": "^4.3.5"
   },
   "overrides": {
-    "tar": "^7.5.4"
+    "tar": "^7.5.4",
+    "jws": "^4.0.1",
+    "body-parser": "^1.20.3",
+    "js-yaml": "^4.1.1",
+    "diff": "^8.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
