--- a/backend/package.json
+++ b/backend/package.json
@@ -57,9 +57,7 @@
   "overrides": {
     "tar": "^7.5.4",
     "jws": "^4.0.1",
-    "body-parser": "^1.20.3",
-    "js-yaml": "^4.1.1",
-    "diff": "^8.0.2"
+    "js-yaml": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
