feat: Implemented GET /wallets/:id/balance to get user's wallet balance. closes #940

--- a/.gitignore
+++ b/.gitignore
@@ -43,10 +43,12 @@ next-env.d.ts
 # Claude
 .claude/
 
-#IDE/Editors 
+#IDE/Editors
 ./vscode
 ./idea
 settings.json
 
 # Freelance matching service dependencies
 /services/freelance-matching/node_modules/
+
+bun.lock
