--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false"
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:balance": "jest balance",
+    "test:balance:coverage": "jest balance --coverage"
   },
   "keywords": [],
   "author": "",
