--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ settings.json
 
 # Freelance matching service dependencies
 /services/freelance-matching/node_modules/
+
+# Development helper files (not meant to be committed)
+commit.sh
+pr_description.md
+backend/test-balance.sh
+backend/TEST_BALANCE.md
