feat: Implement project status transition validation, enhance project update/delete logic using authenticated user IDs, and add comprehensive unit tests.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,7 +10,8 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
-    }
+    },
+    "types": ["node", "jest"]
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["node_modules", "dist"],
