--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "baseUrl": "./src",
+    "types": ["node", "jest"],
     "paths": {
       "@/*": ["*"]
     }
