feat: enhance project setup and smart contract integration
- Updated `package.json` to include new scripts for generating and building TypeScript bindings.
- Revised `README.md` for improved clarity on project setup, installation, and smart contract integration.
- Enhanced backend environment configuration in `.env.example` for better contract management.
- Refactored `EscrowService` to utilize typed bindings for Stellar smart contracts, improving type safety and code clarity.
- Updated `Cargo.lock` to include new smart contract dependencies.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -51,13 +51,26 @@ FRONTEND_URL=http://localhost:3000
 EMAIL_DISABLED=false
 
 # ============================================
-# SECTION: STELLAR NETWORK (solo Stellar testnet)
+# SECTION: STELLAR NETWORK CONFIGURATION
 # ============================================
+# Network type: testnet, futurenet, or mainnet
 STELLAR_NETWORK=testnet
+
+# Stellar Horizon URL (for account operations)
 STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
-SOROBAN_RPC_URL=https://soroban-testnet.stellar.org:443
-NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
-STELLAR_NETWORK_PASSPHRASE="Test SDF Network ; September 2015"
+
+# Soroban RPC URL (for smart contract operations)
+STELLAR_RPC_URL=https://soroban-testnet.stellar.org
+
+# Network passphrase (auto-detected if not set based on STELLAR_NETWORK)
+# Testnet: "Test SDF Network ; September 2015"
+# Mainnet: "Public Global Stellar Network ; September 2015"
+STELLAR_NETWORK_PASSPHRASE=Test SDF Network ; September 2015
+
+# Backend signer secret key for contract transactions
+# Generate with: stellar keys generate --network testnet
+# WARNING: Keep this secure! Never commit to git!
+STELLAR_BACKEND_SECRET_KEY=
 
 # ============================================
 # OAuth - Credentials
@@ -85,18 +98,28 @@ GITHUB_CALLBACK_URL=http://localhost:4000/api/oauth/github/callback
 OAUTH_TOKEN_ENCRYPTION_KEY=your-wallet-encryption-key-min-32-characters-long
 
 # ============================================
-# SECTION: SOROBAN SMART CONTRACTS
+# SECTION: STELLAR SMART CONTRACTS
 # ============================================
-# Contract addresses deployed on Stellar network
-# Get contract IDs after deploying contracts to testnet/mainnet
+# Contract IDs obtained after deploying contracts to the network
+# Deploy contracts using: pnpm run bindings:generate
+# See docs/STELLAR_BINDINGS.md for deployment instructions
 
-# Admin secret key for signing contract transactions
-# WARNING: Keep this secure! Never commit to git!
-STELLAR_ADMIN_SECRET_KEY=your-admin-secret-key-here
+# Escrow Factory - Deploys new escrow contracts
+ESCROW_FACTORY_CONTRACT_ID=
 
-# Project Publication Contract
-# Deployed contract address for recording project publications
-PROJECT_PUBLICATION_CONTRACT_ID=your-project-publication-contract-id-here
+# Fee Manager - Manages platform fees
+FEE_MANAGER_CONTRACT_ID=
 
-# User Registry Contract (if needed)
-USER_REGISTRY_CONTRACT_ID=your-user-registry-contract-id-here
+# User Registry - Manages user profiles and verification
+USER_REGISTRY_CONTRACT_ID=
+
+# ============================================
+# Legacy Contract IDs (for backward compatibility)
+# Remove these once migration to new bindings is complete
+# ============================================
+
+# Project Publication Contract (legacy)
+PROJECT_PUBLICATION_CONTRACT_ID=
+
+# Admin secret key (legacy - use STELLAR_BACKEND_SECRET_KEY instead)
+STELLAR_ADMIN_SECRET_KEY=
