--- a/backend/package.json
+++ b/backend/package.json
@@ -60,7 +60,8 @@
   "overrides": {
     "tar": "^7.5.4",
     "jws": "^4.0.1",
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "fast-xml-parser": "5.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
