--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:ci": "echo 'ESLint disabled for CI'",
+    "docs:index": "node scripts/generate-docs-index.mjs",
+    "prebuild": "node scripts/generate-docs-index.mjs",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -82,6 +84,7 @@
     "emoji-mart": "^5.6.0",
     "express": "^4.21.2",
     "framer-motion": "^12.5.0",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.473.0",
     "next": "15.5.9",
     "next-themes": "^0.4.6",
