--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ next-env.d.ts
 # Backend
 backend/node_modules/
 backend/dist/
+backend/.env.test
+backend/logs/
+*.log
+
+# Documentation
+src/data/docs-index.json
