--- a/package.json
+++ b/package.json
@@ -2,20 +2,13 @@
   "name": "offer-hub",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "^18.18.0 || ^19.8.0 || >=20.0.0"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:ci": "next lint",
     "docs:index": "node scripts/generate-docs-index.mjs",
-    "prebuild": "node scripts/generate-docs-index.mjs",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "prebuild": "node scripts/generate-docs-index.mjs"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
@@ -29,14 +22,14 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/node": "^22.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.1.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.7.0"
   }
 }
