--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.34.1",
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
+    "html2pdf.js": "^0.14.0",
     "lucide-react": "^0.574.0",
     "next": "^15.1.0",
     "next-mdx-remote": "^6.0.0",
